--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 
 * {
   font-family: "Roboto", sans-serif;
-  box-sizing: border-box;
   background-color: #f6f4d2;
 }
 html,
 body {
   margin: 0;
   height: 100%;
+  position: relative;
 }
 body {
   display: flex;
@@ -38,10 +38,16 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  right: 17.5%;
-  top: 25%;
+  position: relative;
   padding: 90px 70px;
+  max-width: 50vh;
+  min-width: 10vh;
+  max-height: 50vh;
+  min-height: 10vh;
+
+  left: 10%;
+  top: 5%;
+
   background-color: #cbdfbd;
 }
 .button {
@@ -68,7 +74,7 @@ img {
   align-items: center;
 }
 .container h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bold;
   padding: 10px 0;
   background-color: #cbdfbd;
